--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -1,4 +1,11 @@
 /* Add application styles & imports to this file! */
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import "node_modules/material-design-icons/iconfont/material-icons.css";
+@import 'node_modules/material-design-icons/iconfont/material-icons.css';
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
