--- a/src/app/issue-tracking/components/home/home.component.html
+++ b/src/app/issue-tracking/components/home/home.component.html
@@ -1,5 +1,8 @@
 <div id="home">
-  <div class="nav">Navbar</div>
+  <div class="nav d-flex p-2">
+    <h5 class="pr-2 m-0">Issue Tracker</h5>
+    <input type="search" #searchBox />
+  </div>
   <div class="content-body">
     <div class="left-navigation">
       <ul>
