8 files modified, 3 added

--- a/src/app/issue-tracking/components/home/home.component.css
+++ b/src/app/issue-tracking/components/home/home.component.css
@@ -10,7 +10,7 @@
 }
 
 .nav h5 {
-  color: #ffffff;
+  font-size: 24px;
 }
 
 .content-body {
@@ -22,4 +22,8 @@
 .left-navigation {
   height: 100%;
   width: 150px;
+}
+
+.logout {
+  align-items: center;
 }
