--- a/src/app/issue-tracking/components/search/search.component.html
+++ b/src/app/issue-tracking/components/search/search.component.html
@@ -1,1 +1,4 @@
-<input type="search" #searchBox [placeholder]="placeholder"/>
+<div id="search-box">
+  <input type="search" #searchBox [placeholder]="placeholder" />
+  <span class="material-symbols-outlined"> search </span>
+</div>
