--- a/src/app/issue-tracking/components/home/home.component.css
+++ b/src/app/issue-tracking/components/home/home.component.css
@@ -5,7 +5,6 @@
 }
 
 .nav {
-  height: 50px;
   place-content: center start;
 }
 
@@ -14,7 +13,7 @@
 }
 
 .content-body {
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
   width: 100%;
   display: flex;
 }
@@ -22,6 +21,7 @@
 .left-navigation {
   height: 100%;
   width: 150px;
+  border-right: 1px solid rgb(207, 207, 207);
 }
 
 .logout {
