5 files modified, 4 added, 1 deleted

--- a/src/app/issue-tracking/components/home/home.component.html
+++ b/src/app/issue-tracking/components/home/home.component.html
@@ -9,11 +9,10 @@
 
     <mat-form-field>
       <mat-label>Create New..</mat-label>
-      <select matNativeControl id="mySelectId">
-        <option value="" disabled selected></option>
-        <option value="issue">Issue</option>
-        <option value="sprint">Sprint</option>
-      </select>
+      <mat-select (selectionChange)="createNew($event.value)">
+        <mat-option value="sprint">Sprint</mat-option>
+        <mat-option value="issue">Issue</mat-option>
+      </mat-select>
     </mat-form-field>
 
     <span
