--- a/src/app/issue-tracking/new-sprint/new-sprint.component.html
+++ b/src/app/issue-tracking/new-sprint/new-sprint.component.html
@@ -9,11 +9,16 @@
 
     <mat-form-field>
       <mat-label>Start Date - End Date</mat-label>
-      <textarea
-        matInput
-        placeholder="Enter description.."
-        formControlName="description"
-      ></textarea>
+      <mat-date-range-input [rangePicker]="picker">
+        <input matStartDate placeholder="Start date" />
+        <input matEndDate placeholder="End date" />
+      </mat-date-range-input>
+      <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="picker"
+      ></mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
     </mat-form-field>
 
     <mat-form-field>
